--- a/css-bootstrap4-verstka.html
+++ b/css-bootstrap4-verstka.html
@@ -33,7 +33,7 @@
          <div class="carousel-inner">
              <div class="carousel-item active">
 	         <div class="row justify-content-center">
-	         <div class="col-6 iphone-wrap"><img src="images/iphone.png" class="d-block w-100" alt=""></div>
+	         <div class="col-6 iphone-wrap"><img src="images/iphone.png" class="d-block w-100" alt="iphone"></div>
              <div class="col-6 text-wrap"><h2>Lorem Ipsum is simply</h2>
 			 <p>Dummy text of the<br>
 			 printing & typesetting</p>
@@ -42,7 +42,7 @@
         </div>
              <div class="carousel-item">
       	     <div class="row justify-content-center">
-	         <div class="col-6 iphone-wrap"><img src="images/iphone.png" class="d-block w-100" alt=""></div>
+	         <div class="col-6 iphone-wrap"><img src="images/iphone.png" class="d-block w-100" alt="iphone"></div>
              <div class="col-6 text-wrap"><h2>Lorem Ipsum is simply</h2>
 			<p>Dummy text of the<br>
 			printing & typesetting</p>
@@ -51,7 +51,7 @@
         </div>
              <div class="carousel-item">
       	     <div class="row justify-content-center">
-	         <div class="col-6 iphone-wrap"><img src="images/iphone.png" class="d-block w-100" alt=""></div>
+	         <div class="col-6 iphone-wrap"><img src="images/iphone.png" class="d-block w-100" alt="iphone"></div>
              <div class="col-6 text-wrap"><h2>Lorem Ipsum is simply</h2>
 			<p>Dummy text of the<br>
 			printing & typesetting</p>
@@ -77,7 +77,7 @@
 		<div class="row">
 		    <div class="col-sm-4 wrap-icons">
 			   <div class="icon-circle blue">
-			    <img class="image-icon" src="images/pen.png">
+			    <img class="image-icon" src="images/pen.png" alt="pen">
 				</div>
 				<h6>Lorem Ipsum is simply</h6>
 				<p>Lorem Ipsum is not simply random text.<br> 
@@ -85,7 +85,7 @@
 			</div>
 			<div class="col-sm-4 wrap-icons">
 			   <div class="icon-circle red">
-			    <img class="image-icon" src="images/screen.png">
+			    <img class="image-icon" src="images/screen.png" alt="screen">
 				</div>
 				<h6>Lorem Ipsum is simply</h6>
 				<p>Lorem Ipsum is not simply random text.<br> 
@@ -93,7 +93,7 @@
 			</div>
 			<div class="col-sm-4 wrap-icons">
 			   <div class="icon-circle pink">
-			    <img class="image-icon" src="images/basket.png">
+			    <img class="image-icon" src="images/basket.png" alt="basket">
 				</div>
 				<h6>Lorem Ipsum is simply</h6>
 				<p>Lorem Ipsum is not simply random text.<br> 
@@ -110,7 +110,7 @@
 		    <div class="col-sm-6">
 			   <div class="cart-wrap">
 			   <h2>The Shopping cart</h2>
-			    <img class="cart-image" src="images/cart.png">
+			    <img class="cart-image" src="images/cart.png" alt="cart">
 				</div>
 			</div>
 			<div class="col-sm-6">
